Closed
Bug 341806
Opened 19 years ago
Closed 19 years ago
[FIX]refresh header ignored when external helper app service invoked
Categories
(Core Graveyard :: File Handling, defect, P1)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: marria, Assigned: bzbarsky)
References
()
Details
Attachments
(2 files)
|
112 bytes,
text/plain
|
Details | |
|
2.73 KB,
patch
|
Biesinger
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
The logic for handling refresh headers in nsExternalHelperAppService is broken. To repro, send a refresh header and an unrecognized content type (which causes the external helper app service to be invoked).
In nsExternalHelperAppService.cpp, it seems that mOriginalChannel is always null, so probably there is something wrong with the call to GetDocumentChannel in RetargetLoadNotifications.
I'm not sure which component to put this bug under so feel free to move it if appropriate.
| Reporter | ||
Comment 1•19 years ago
|
||
Updated•19 years ago
|
Assignee: nobody → file-handling
Component: Networking → File Handling
QA Contact: networking → ian
| Assignee | ||
Comment 2•19 years ago
|
||
Well, the obvious reason this doesn't work is that we call RemoveRequest first. This nulls out the mDocumentRequest in the docloader in this case, so mOriginalChannel comes back null. That seems to be a regression from bug 233145. biesi, do you happen to recall why you changed the order here?
Blocks: 233145
Comment 3•19 years ago
|
||
wow, that was almost 2.5 years ago. I don't think I had a good reason for this, I probably wanted to move it before the early return if getting the uri loader failed. I clearly didn't realize it had a side effect...
| Assignee | ||
Updated•19 years ago
|
| Assignee | ||
Updated•19 years ago
|
Assignee: file-handling → bzbarsky
Priority: -- → P1
Summary: refresh header ignored when external helper app service invoked → [FIX]refresh header ignored when external helper app service invoked
Target Milestone: --- → mozilla1.9alpha
Version: 1.8 Branch → Trunk
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #229705 -
Flags: superreview?(darin)
Attachment #229705 -
Flags: review?(cbiesinger)
Updated•19 years ago
|
Attachment #229705 -
Flags: superreview?(darin) → superreview+
Updated•19 years ago
|
Attachment #229705 -
Flags: review?(cbiesinger) → review+
| Assignee | ||
Comment 5•19 years ago
|
||
Fixed.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•