Follow refresh headers even if we handle the content via the external helper app service.  Bug 341806, r=biesi, sr=darin